change to css styles to prevent cut off during anims

--- a/web/bundles/app/css/index.css
+++ b/web/bundles/app/css/index.css
@@ -56,4 +56,9 @@ body {
 
 .content {
     font-size: 24px;
+    height: 100%;
+}
+
+.ui-effects-wrapper {
+    height: 100%;
 }
